# Automated-Content-Empire

./: .gitignore  README.md  pyproject.toml
config/: config.json
data/content/linkedin/: 2026-07-07_12-27-49.md
data/content/youtube/: 2026-07-08_01-03-41.md  2026-07-08_09-43-55.md
docs/: 00-introduction.md  01-philosophy.md  02-architecture.md  03-folder-structure.md  04-development-roadmap.md  ARCHITECTURE.md  README.md
projects/linux-automation/: project.json
projects/linux-automation/scripts/: script.md
prompts/: linkedin.txt  review.txt  youtube.txt
src/ace/: ai.py  cli.py  commands.py  config.py  content.py  doctor.py  main.py  pipeline.py  project.py  prompt.py  script_cleaner.py  storage.py  workflow.py
src/ace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ace/engines/: review.py  script.py  voice.py
src/ace/providers/: kokoro.py  ollama.py
