[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ace"
version = "0.1.0"
description = "Automated Content Empire"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Fatah Niati", email = "niatifatah@gmail.com" }
]

[project.scripts]
ace = "ace.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
